# pkg/links/domain/repository.go
@@ -1,0 +1,18 @@
+package domain
+
+import (
+	"time"
+)
+
+type Link struct {
+	Url      string
+	Shortned string
+	Created  time.Time
+}
+
+type Repository interface {
+	CreateLink(url string, shortned string) (*Link, error)
+
+	GetLinks() []*Link
+	GetLink(shortned string) (*Link, error)
+}
