# pkg/links/ports/openapi_api.gen.go
@@ -1,4 +1,4 @@
-// Package ports provides primitives to interact with the openapi HTTP API.
+// Package links provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/deepmap/oapi-codegen version v1.8.2 DO NOT EDIT.
 package links
@@ -21,10 +21,10 @@ type ServerInterface interface {
 	GetLinks(w http.ResponseWriter, r *http.Request)
 	// Create a new link
 	// (POST /links)
-	PostLinks(w http.ResponseWriter, r *http.Request)
+	CreateLink(w http.ResponseWriter, r *http.Request)
 	// Get information about a link
 	// (GET /links/{link_id})
-	GetLinksLinkId(w http.ResponseWriter, r *http.Request, linkId string)
+	GetLinkById(w http.ResponseWriter, r *http.Request, linkId string)
 }
 
 // ServerInterfaceWrapper converts contexts to parameters.
@@ -65,12 +65,12 @@ func (siw *ServerInterfaceWrapper) GetLinks(w http.ResponseWriter, r *http.Reque
 	handler(w, r.WithContext(ctx))
 }
 
-// PostLinks operation middleware
-func (siw *ServerInterfaceWrapper) PostLinks(w http.ResponseWriter, r *http.Request) {
+// CreateLink operation middleware
+func (siw *ServerInterfaceWrapper) CreateLink(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
 	var handler = func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.PostLinks(w, r)
+		siw.Handler.CreateLink(w, r)
 	}
 
 	for _, middleware := range siw.HandlerMiddlewares {
@@ -80,8 +80,8 @@ func (siw *ServerInterfaceWrapper) PostLinks(w http.ResponseWriter, r *http.Requ
 	handler(w, r.WithContext(ctx))
 }
 
-// GetLinksLinkId operation middleware
-func (siw *ServerInterfaceWrapper) GetLinksLinkId(w http.ResponseWriter, r *http.Request) {
+// GetLinkById operation middleware
+func (siw *ServerInterfaceWrapper) GetLinkById(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
 	var err error
@@ -96,7 +96,7 @@ func (siw *ServerInterfaceWrapper) GetLinksLinkId(w http.ResponseWriter, r *http
 	}
 
 	var handler = func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.GetLinksLinkId(w, r, linkId)
+		siw.Handler.GetLinkById(w, r, linkId)
 	}
 
 	for _, middleware := range siw.HandlerMiddlewares {
@@ -150,10 +150,10 @@ func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handl
 		r.Get(options.BaseURL+"/links", wrapper.GetLinks)
 	})
 	r.Group(func(r chi.Router) {
-		r.Post(options.BaseURL+"/links", wrapper.PostLinks)
+		r.Post(options.BaseURL+"/links", wrapper.CreateLink)
 	})
 	r.Group(func(r chi.Router) {
-		r.Get(options.BaseURL+"/links/{link_id}", wrapper.GetLinksLinkId)
+		r.Get(options.BaseURL+"/links/{link_id}", wrapper.GetLinkById)
 	})
 
 	return r
