# pkg/links/ports/openapi_types.gen.go
@@ -1,4 +1,4 @@
-// Package ports provides primitives to interact with the openapi HTTP API.
+// Package links provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/deepmap/oapi-codegen version v1.8.2 DO NOT EDIT.
 package links
@@ -39,8 +39,8 @@ type LinkObjectSpec struct {
 	Url      string  `json:"url"`
 }
 
-// PostLinksJSONBody defines parameters for PostLinks.
-type PostLinksJSONBody LinkObjectSpec
+// CreateLinkJSONBody defines parameters for CreateLink.
+type CreateLinkJSONBody LinkObjectSpec
 
-// PostLinksJSONRequestBody defines body for PostLinks for application/json ContentType.
-type PostLinksJSONRequestBody PostLinksJSONBody
+// CreateLinkJSONRequestBody defines body for CreateLink for application/json ContentType.
+type CreateLinkJSONRequestBody CreateLinkJSONBody
